<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id" translatable="false"></string>
    <string name="parse_client_key" translatable="false"></string>
    <string name="parse_rest_api_key" translatable="false"></string>

    <string name="facebook_app_id" translatable="false"></string>

    <string name="app_name">Yeet Club</string>

    <string name="file_permissions">You need to enable file permissions to see what your friends post. Click here to enable file permissions.</string>

    <string name="drawer_item_profile">Yofe</string>
    <string name="notifications_title">Yotificayshes</string>
    <string name="add_comment">Yeet something ints you monk!</string>

    <string name="empty_space" translatable="false"> </string>
    <string name="edit_profile_website">Website</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_name">Full Name</string>
    <string name="edit_profile_title">Yedit Yofe</string>
    <string name="drawer_item_edit_profile">Yedit Yofe</string>
    <string name="drawer_item_home">Yome Yase</string>
    <string name="drawer_item_create">Yite Yeet</string>
    <string name="drawer_item_notifications">Yotificayshes</string>
    <string name="drawer_item_logout">Yog Yout</string>
    <string name="repes">Reeps</string>
    <string name="edit_profile_bae">Bae</string>
    <string name="main_drawer_load">Load New Image</string>
    <string name="main_action_rotate">Rotate Image</string>
    <string name="main_action_crop">Crop Image</string>
    <string name="content_desc_like">Like</string>
    <string name="settings_turn_sound_off">Turn Sound Off</string>
    <string name="sounds_off">Applications sounds have been turned off</string>
    <string name="content_desc_reply">Reply</string>
    <string name="reep">Reep</string>
    <string name="reep_desc">Aren\'tcha gonna reep me?</string>
    <string name="null_content_desc" />
    <string name="content_desc_profile_picture">Profile Picture</string>
    <string name="_0">0</string>
    <string name="_at">\@</string>
    <string name="n">\n</string>
    <string name="content_desc_default_profile_picture">Default Profile Picture</string>
    <string name="yaanich_news">Yaanich News</string>
    <string name="drawer_item_yaanich_news">Yaanich News</string>
    <string name="content_desc_exit">Exit</string>
    <string name="yeeeet">Yeeeet!!!</string>
    <string name="rant">Rant</string>
    <string name="x">X</string>
    <string name="go_in">Go In!!!</string>
    <string name="premium_content">Premium Content</string>
    <string name="see_more_comments">See More Comments</string>
    <string name="premium_content_desc">This Yeet is Hereby\nOfficially Certified\n100% Guaranteed\nPremium Content.</string>
    <string name="mabes_reep_something_ints">Mabes reep something ints?</string>
    <string name="in_reply_to">In reply to</string>
    <string name="previous_reet">Previous Reet:</string>
    <string name="upload_image">Upload Image</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="could_not_retrieve">Could not retrieve messages</string>
    <string name="loading">Loading…</string>
    <string name="user_uploaded_image">User-uploaded image</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password_too_bad">Forgot password? Too bad!</string>
    <string name="new_password_again">New password, again</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="this_message_has_been_liked">This message has been liked</string>
    <string name="settings">Settings</string>
    <string name="yeet_deleted">Cannot retrieve messages at this time. Please try again later.</string>
    <string name="cannot_retrieve_messages">Cannot retrieve messages at this time. Please try again later.</string>
    <string name="anonymous_fullName">Anonymous Lose</string>
    <string name="message_deleted">Message deleted</string>
    <string name="more_replies">more replies</string>
    <string name="notifications_message">This is where your friends send you love!</string>
    <string name="notifications_prompt">You will receive your notifications here.</string>
    <string name="more_reply">more reply</string>
    <string name="option_1">Option 1</string>
    <string name="value_1">Value 1</string>
    <string name="option_2">Option 2</string>
    <string name="value_2">Value 2</string>
    <string name="option_3">Option 3</string>
    <string name="value_3">Value 3</string>
    <string name="value_4">Value 4</string>
    <string name="option_4">Option 4</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="create_poll">Create Poll</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_this_yeet">Do you want to delete this Yeet?</string>
    <string name="points">Points:</string>
    <string name="number_of_points_accumulated">The number of points this user has accumulated</string>
    <string name="rank">Rank:</string>
    <string name="my_first_yeet">#myFirstYeet</string>
    <string name="is_bae"> IS BAE</string>
</resources>