<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:minHeight="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/ActionBarTitle"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc_exit"
                android:onClick="TitleClicked"
                android:src="@drawable/ic_action_customizer_close" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:fadeScrollbars="false"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@drawable/custom_scroll_style"
        android:scrollbars="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="140">

            <EditText
                android:id="@+id/addCommentTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linearLayout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/toolbar"
                android:gravity="top"
                android:hint="@string/add_comment"
                android:inputType="text|textMultiLine"
                android:maxLines="5"
                android:padding="15dp"
                android:scrollHorizontally="false"
                android:textColor="#000000"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pollOption1TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="25">

                <EditText
                    android:id="@+id/pollOption1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="top"
                    android:hint="@string/choice_1"
                    android:inputType="text|textMultiLine"
                    android:maxLines="5"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:scrollHorizontally="false"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pollOption2TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="25">

                <EditText
                    android:id="@+id/pollOption2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="top"
                    android:hint="@string/choice_2"
                    android:inputType="text|textMultiLine"
                    android:maxLines="5"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:scrollHorizontally="false"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pollOption3TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="25">

                <EditText
                    android:id="@+id/pollOption3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="top"
                    android:hint="@string/choice_3"
                    android:inputType="text|textMultiLine"
                    android:maxLines="5"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:scrollHorizontally="false"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pollOption4TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:counterEnabled="true"
                app:counterMaxLength="25">

                <EditText
                    android:id="@+id/pollOption4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="top"
                    android:hint="@string/choice_4"
                    android:inputType="text|textMultiLine"
                    android:maxLines="5"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:scrollHorizontally="false"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/addOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/content_desc_exit"
                    android:onClick="AddOption"
                    android:src="@drawable/ic_create_poll"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/exitPoll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/content_desc_exit"
                    android:onClick="ExitPoll"
                    android:src="@drawable/ic_action_customizer_close"
                    android:visibility="gone" />

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        </android.support.design.widget.TextInputLayout>

    </ScrollView>

    <TextView
        android:id="@+id/previousRantText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollview"
        android:padding="15dp"
        android:text="@string/previous_reet"
        android:textColor="#9e9e9e"
        android:textSize="14sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="0dp">

        <Button
            android:id="@+id/startRant"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:background="@color/red"
            android:text="@string/rant"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:windowSoftInputMode="adjustResize" />

        <Button
            android:id="@+id/exitRant"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:background="@color/burgundy"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:windowSoftInputMode="adjustResize" />

        <Button
            android:id="@+id/submitComment"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_toEndOf="@+id/startRant"
            android:layout_toRightOf="@+id/startRant"
            android:background="@color/highlight"
            android:text="@string/yeeeet"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:windowSoftInputMode="adjustResize" />

        <Button
            android:id="@+id/submitRant"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_toEndOf="@+id/exitRant"
            android:layout_toRightOf="@+id/exitRant"
            android:background="@color/red"
            android:text="@string/go_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:windowSoftInputMode="adjustResize" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/uploadImageCover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent"
        android:visibility="gone" />

</RelativeLayout>