<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:minHeight="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/feed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:text="@string/drawer_item_profile"
                android:textColor="@color/highlight"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:id="@+id/userProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|start|center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="normal"
            android:typeface="sans"
            android:visibility="visible">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="top|center_horizontal">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="87dp"
                    android:layout_height="87dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:clickable="true"
                    android:contentDescription="@string/content_desc_profile_picture"
                    android:scaleType="fitXY"
                    android:src="@android:color/transparent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/null_content_desc"
                    android:src="@drawable/frame" />

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userProfile"
            android:paddingBottom="0dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/n"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullName"
            android:paddingBottom="0dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/n"
            android:textSize="16sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/websiteLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bio"
            android:autoLink="web"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/n"
            android:textColor="@color/highlight"
            android:textSize="14sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/bae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/websiteLink"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/n"
            android:textColor="#e91e63"
            android:textSize="14sp"
            android:typeface="sans" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bae">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:scrollbarSize="10dp"
                android:scrollbarThumbVertical="@drawable/custom_scroll_style"
                android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_send_feed" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="#ffffff"
        android:padding="15dp">

        <TextView
            android:id="@+id/networkOfflineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/reconnect_button"
            android:textColor="@color/highlight"
            android:typeface="sans"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>